2002-01-08  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b3

	* Fixed a bug where moving a nested album to a new location would
	  delete all the photos inside the album.

	* Added "mpeg" to the list of movie types.

2002-01-04  John Kirkland <jpk@bl.org> 1.2.6-cvs-b2
	
	* Fixed bug #426151 -- Upload fails on file names with apostrophe

2002-01-04	Chris Smith <chris@jacko.com> 1.2.6-cvs-b1

	* Fixed bug #490317: mismatched table tags in view_photo.

	* Fixed bug #497703: some &nbsp;'s that were missing
	  their semicolons.

	* Fixed bug in view_album where when embedded in a Nuke install
	  that was 'also' symlinked, the paths to the pixel_trans.gif's
	  were broken.

2002-01-04  John Kirkland <jpk@bl.org> 1.2.5-p1

	* Fixed bug where if you deleted an album, gallery would not
	  delete the nested albums within it.  SF #466790

2001-12-07  Bharat Mediratta  <bharat@menalto.com> (1.2.5)

	* v1.2.5 ships!

2001-12-06  Bharat Mediratta  <bharat@menalto.com> (1.2.5-cvs-b2)

	* Fixed bug #484755: Directory import fails on PHP 4.0.4pl1

2001-12-04  Bharat Mediratta  <bharat@menalto.com> (1.2.5-cvs-b1)

	* README: added more info on how to do CHMOD operations from CuteFTP.

	* Incorporated a patch from Adam Lazur (adam@lazur.org) which increases
	  Gallery's ability to deal with symbolic links.  It checks to see if a
	  file is a symlink, and that the symlink is valid, before trying to
	  open/read it.  This patch enables Adam's debian package of Gallery.
	
2001-12-04  Bharat Mediratta  <bharat@menalto.com> (1.2.4-p1-cvs-b1)

	* PostNuke now has the capability for using encrypted database
	  username/password information, which works just fine with the ADODB
	  database abstraction layer but breaks our layer.  I've updated the
	  PostNuke User and UserDB classes to use the PostNuke database object
	  to fix this problem.

2001-11-29  Bharat Mediratta  <bharat@menalto.com> (1.2.4)

	* v1.2.4 ships!

2001-11-28  Bharat Mediratta  <bharat@menalto.com> (1.2.4-cvs-b1)
