@@ -1,3 +1,9 @@
+2002-01-18    <bharat@fusionone.com> 1.2.6-cvs-b4
+
+	* Change the "Upload Progress" dialog box to use a single animated GIF
+	  instead of the javascript solution.  This can reduce server load
+	  considerably if the browser has very conservative caching settings.
+
 2002-01-08  Bharat Mediratta  <bharat@menalto.com> 1.2.6-cvs-b3
 
 	* Fixed a bug where moving a nested album to a new location would
